# playground-series-s6e6

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: kaggle-developer.md  kaggle-eda-explorer.md  kaggle-proposal-reviewer.md  kaggle-proposer.md
.claude/skills/kaggle-baseline/: SKILL.md
.claude/skills/kaggle-eda/: SKILL.md
.claude/skills/kaggle-experiment/: SKILL.md
.claude/skills/kaggle-io/: SKILL.md
.claude/skills/kaggle-kernel/: SKILL.md
.claude/skills/kaggle-leakage/: SKILL.md
.claude/skills/kaggle-start/: SKILL.md
.claude/skills/kaggle-status/: SKILL.md
.claude/skills/kaggle-submit/: SKILL.md
.claude/skills/kaggle-validate/: SKILL.md
.claude/workflows/: propose-loop.js
comps/playground-series-s6e6/: a1_5seed.py  a1_merge_probe.py  a2_caruana.py  a3_tabpfn_meta.py  a4_vote.py  b1_fwls.py  blend_probe.py  blend_probe_gpu.py  blend_probe_gpu2.py  c11_neardup.py  c1_restack.py  c1_step0.py  c3_diag.py  c5_restack.py  config.md  corr_analysis.py  data.md  decorr_restack.py  discussions.md  eda.md  feature_importance.json  graph.md  journal.md  lessons_archive.md  meta_config_probe.py  orig_prior_probe.py  progress.md  research.md  restack_probe.py  round_plan.md  sdss17_ab_probe.py  sdss17_drift_probe.py  spec.md  stack_probe.py  stacker_config_probe.py  submissions.md  tabpfn_speed_probe.py  validation.md  viz_sed_images.py
comps/playground-series-s6e6/champion/: README.md
comps/playground-series-s6e6/probes/: capturability_check.py  drop_study.py  ensemble_of_ensembles.py  finals_robustness.py  hidden_signal_sweep.py  mitra_errcorr.py  mitra_fold0_stack.py  n140_nfold_sweep.py  (+9 more)
tools/: __init__.py  kaggle_io.py  make_folds.py  pred_diagnostic.py  validate_submission.py
(+363 files in other folders)
